added - express-session, passport-local to tech stack

config.json


description


routes